--- a/copyNBTlib.csproj
+++ b/copyNBTlib.csproj
@@ -4,7 +4,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{6F06F0F9-76FF-467F-90E3-2B01318B0149}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <RootNamespace>copyNBTlib</RootNamespace>
     <AssemblyName>copyNBTlib</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
